tests/files/parser_tests/should_fail/116.cmdr
//Should not parse
x void = 4;